--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@
 
 name: CI
 
-# Controls when the action will run. Triggers the workflow on push or pull request1
+# Controls when the action will run. Triggers the ssworkflow on push or pull request1
 # events but only for the master branch
 on:
   push:
