--- a/.github/workflows/testjobstatus.yml
+++ b/.github/workflows/testjobstatus.yml
@@ -14,12 +14,13 @@ jobs:
       if: success()
       run: echo hello
     
-   job2:
+  job2:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - run: exit code 1
-    - name test job.status
-      if job.status == 'success'
-      run: echo hello job status
+      
+    - name: test job.status
+      if: job.status == 'success'
+      run: echo 'hello job status'
