--- a/.github/workflows/testjobstatus.yml
+++ b/.github/workflows/testjobstatus.yml
@@ -15,6 +15,8 @@ jobs:
       run: echo hello
     
   job2:
+    needs: job1
+    if: job.status == 'success'
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     steps:
