--- a/.github/workflows/testjobstatus.yml
+++ b/.github/workflows/testjobstatus.yml
@@ -16,7 +16,7 @@ jobs:
     
   job2:
     needs: job1
-    if: job.status == 'success'
+    if: success()
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     steps:
