--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,15 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
+    env: 
+      key1: ${{secrets.test2}} 
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Count Lines of Code (cloc)
-      uses: zhuorg/cloc-action@c538322
+    - uses: actions/checkout@v2  
+    - run: echo $key1
+      if: ${{env.key1}} == 'aaa'
+    #- name: Count Lines of Code (cloc)
+    #  uses: zhuorg/cloc-action@c538322
 
