--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,9 @@ jobs:
     runs-on: macos-latest
 
     steps: 
-    - run: csrutil status
+    - run: |
+        csrutil status
+        csrutil enable --without dtrace
      
 
 
