--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,13 +9,12 @@ on:
 
 jobs:
   build:
-
+    env: 
+      key1: ${{secrets.test2 }}
     runs-on: macos-latest
-
+    if: ${{env.key1}} == 'aaa'
     steps: 
-    - run: |
-        csrutil status
-        csrutil enable --without dtrace
-     
+    - run:   echo hello
+      if: ${{env.key1}} == 'aaa'
 
 
