--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,6 @@ jobs:
     runs-on: macos-latest
     steps: 
     - run: echo hello
-      if: ${{env.key1}} == 'aaa'
+      if: ${{secrets.test2 }} == 'aaa'
 
 
