--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,13 +7,24 @@ on:
      paths:
        - '**/main.yml'
 
+
+
 jobs:
-  build:
-    env: 
-      key1: ${{secrets.test2 }}
-    runs-on: macos-latest
-    steps: 
-    - run: echo hello
-      if: ${{secrets.test2 }} == 'aaa'
+  run_tests:
+    runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:11-alpine
+        env:
+          POSTGRES_USER: monster
+          POSTGRES_PASSWORD: monster
+        ports:
+          - "54321:5432"
+        # needed because the postgres container does not provide a healthcheck
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 10
+
+    steps:
+      - uses: actions/checkout@v2
 
 
