--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,20 +11,18 @@ on:
 
 jobs:
   run_tests:
-    runs-on: ubuntu-latest
-
-    services:
-      postgres:
-        image: postgres:11-alpine
-        env:
-          POSTGRES_USER: monster
-          POSTGRES_PASSWORD: monster
-        ports:
-          - "54321:5432"
-        # needed because the postgres container does not provide a healthcheck
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 10
-
+    runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: Adzz/elixir_run_tests_action@v2.0.0
-
+      - name: Dump env context
+        env:
+          ENV_CONTEXT: ${{ toJson(env) }}
+        run: echo "$ENV_CONTEXT"
+      - name: set env ProgramFiles
+        shell: bash    
+        run: |
+           echo $ProgramFiles 
+           echo "::set-env name=ProgramFilesPath::$ProgramFiles"
+      - name: Dump env context 2
+        env:
+          ENV_CONTEXT: ${{ toJson(env) }}
+        run: echo "$ENV_CONTEXT"
