--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,10 +18,10 @@ jobs:
           ENV_CONTEXT: ${{ toJson(env) }}
         run: echo "$ENV_CONTEXT"
       - name: set env ProgramFiles
-        shell: bash    
+        shell: cmd    
         run: |
-           echo $ProgramFiles 
-           echo "::set-env name=ProgramFilesPath::$ProgramFiles"
+           echo %programfiles%
+           echo ::set-env name=ProgramFilesPath::%programfiles%
       - name: Dump env context 2
         env:
           ENV_CONTEXT: ${{ toJson(env) }}
