--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,4 @@ jobs:
       - name: Dump env context 2
         env:
           ENV_CONTEXT1: ${{ toJson(env) }}
-        run: echo "$ENV_CONTEXT1"
+        run: write-host "$env:ENV_CONTEXT1"
