--- a/.github/workflows/dockeraction.yml
+++ b/.github/workflows/dockeraction.yml
@@ -15,4 +15,4 @@ jobs:
         with:
           fetch-depth: 0
       - name: Lint commit messages
-        uses: yanjingzhu/DockerContainer_action@v1
+        uses: yanjingzhu/DockerContainer_action@new2
