--- a/.github/workflows/secretwithvar.yml
+++ b/.github/workflows/secretwithvar.yml
@@ -10,6 +10,6 @@ jobs:
          echo "::set-env name=ENVIRONMENT::PROD"
     - run: |
          echo $ENVIRONMENT
-         echo ${{ secrets[$ENVIRONMENT] }}
+         echo ${{ secrets.$ENVIRONMENT }}
       env: 
         env_name: ${{secrets.PROD }}
