--- a/.github/workflows/secretwithvar.yml
+++ b/.github/workflows/secretwithvar.yml
@@ -1,4 +1,4 @@
-Name: get secrets variable name from another env
+name: get secrets variable name from another env
 on: push
 jobs:
   get-secret:
@@ -6,10 +6,11 @@ jobs:
     steps:
     - name: Set env to production
       if: endsWith(github.ref, '/master')
-      run: |
-         echo "::set-env name=ENVIRONMENT::PROD"
-    - run: |
-         echo $ENVIRONMENT
-         echo ${{ secrets.$ENVIRONMENT }}
+      run: echo "::set-env name=ENVIRONMENT::PROD"
       env: 
-        env_name: ${{secrets.PROD }}
+        environment: ${{secrets.PROD}}
+    - name: Set env to non production 
+      if: "!endsWith(github.ref, '/master')"
+      run: echo "::set-env name=ENVIRONMENT::TEST"
+      env: 
+        environment: ${{secrets.TEST}}
