--- a/.github/workflows/secretwithvar.yml
+++ b/.github/workflows/secretwithvar.yml
@@ -6,11 +6,11 @@ jobs:
     steps:
     - name: Set env to production
       if: endsWith(github.ref, '/master')
-      run: echo "::set-env name=ENVIRONMENT::PROD"
+      run: echo $environment
       env: 
         environment: ${{secrets.PROD}}
     - name: Set env to non production 
       if: "!endsWith(github.ref, '/master')"
-      run: echo "::set-env name=ENVIRONMENT::TEST"
+      run: echo $environment
       env: 
         environment: ${{secrets.TEST}}
