--- a/.github/workflows/dockeraction.yml
+++ b/.github/workflows/dockeraction.yml
@@ -1,6 +1,6 @@
 name: Lint commit messages
 on:
-  check_suite:
+  push:
   #push:
   #  branches:
   #    - master
@@ -15,5 +15,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Lint commit messages
-        uses: yanjingzhu/DockerContainer_action@new2
+      - name: use my js action
+        uses: yanjingzhu/FirstJSAction@master
+        with: 
+          who-to-greet: "yan jingzhu"
