--- a/.github/workflows/dockeraction.yml
+++ b/.github/workflows/dockeraction.yml
@@ -4,7 +4,7 @@ on:
   #push:
   #  branches:
   #    - master
- # pull_request:
+ ## pull_request:
 jobs:
   commitlint:
     runs-on: ubuntu-latest
