--- a/.github/workflows/dockeraction.yml
+++ b/.github/workflows/dockeraction.yml
@@ -19,3 +19,5 @@ jobs:
         uses: yanjingzhu/FirstJSAction@master
         with: 
           who-to-greet: "yan jingzhu"
+        continue-on-error: true
+      - run: echo "Hello"
