--- a/.github/workflows/dockeraction.yml
+++ b/.github/workflows/dockeraction.yml
@@ -15,10 +15,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: use my js action
-        uses: yanjingzhu/FirstJSAction@master
-        with: 
-          who-to-greet: "yan jingzhu"
-        
-      - run: echo "Hello"
-        if: always()
+              
+      - run: echo $GITHUB_TOKEN
+ 
