--- a/.github/workflows/dockeraction.yml
+++ b/.github/workflows/dockeraction.yml
@@ -1,10 +1,9 @@
 name: Lint commit messages
 on:
   push:
-  #push:
-  #  branches:
-  #    - master
- ## pull_request:
+    branches:
+    - master
+
 jobs:
   commitlint:
     runs-on: ubuntu-latest
