--- a/.github/workflows/dockeraction.yml
+++ b/.github/workflows/dockeraction.yml
@@ -2,7 +2,10 @@ name: Lint commit messages
 on:
   push:
     branches:
-    - yan
+      - yan
+    tags-ignore:
+      - '*'
+      
  ## pull_request:
 jobs:
   commitlint:
